cmake_minimum_required(VERSION 3.23)
project(CPP_Labs)

set(CMAKE_CXX_STANDARD 20)

add_executable(Lab7 Lab7/main.cpp Lab7/Matrix.cpp Lab7/Matrix.h Lab7/Matrix2.cpp Lab7/Matrix2.h)
add_executable(Lab8 Lab8/main.cpp Lab8/PQueue.h)
add_executable(Lab11 Lab11/Parser.cpp Lab11/Parser.h Lab11/main.cpp)
add_executable(Lab12  Lab12/main.cpp)